@@ -1,3 +1,8 @@
+2010-11-20  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	* gdb.dwarf2/dw2-ada-ffffffff.S: New file.
+	* gdb.dwarf2/dw2-ada-ffffffff.exp: New file.
+
 2010-11-18  Doug Evans  <dje@google.com>
 
 	* gdb.server/ext-run.exp: Fix intermittent failures.
